[gd_scene load_steps=5 format=3 uid="uid://bk2g077duc5k7"]

[ext_resource type="Script" uid="uid://58pnthmdgt0r" path="res://LevelProgressBar.gd" id="1_w54ex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w54ex"]
bg_color = Color(0.411765, 0.411765, 0.133333, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w54ex"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_wr741"]
font_size = 14

[node name="LevelProgressBar" type="PanelContainer"]
offset_right = 225.0
offset_bottom = 44.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w54ex")
script = ExtResource("1_w54ex")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Level" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_w54ex")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
rounded = true
show_percentage = false

[node name="ExperienceLabel" type="Label" parent="MarginContainer/HBoxContainer/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_wr741")
horizontal_alignment = 1
vertical_alignment = 1
